[gd_scene load_steps=5 format=3 uid="uid://drmfanhedar0q"]

[ext_resource type="Theme" uid="uid://cpiar2ssrpb7h" path="res://Themes/theme_001.tres" id="1_sqxtk"]
[ext_resource type="Script" path="res://Scripts/character_status.gd" id="2_ykhvd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqojo"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxo2"]
bg_color = Color(0.713198, 0.586473, 0.171329, 1)

[node name="Character_status" type="Panel"]
custom_minimum_size = Vector2(256, 288)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -144.0
offset_right = 128.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sqxtk")
script = ExtResource("2_ykhvd")

[node name="Labels" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(224, 264)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 280.0
theme_override_constants/separation = 6

[node name="Name" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Character Name"

[node name="Level" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Level"

[node name="Strength" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Strength"

[node name="Vitality" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Vitality"

[node name="Agility" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Agility"

[node name="Dexterity" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Dexterity"

[node name="Intelligence" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Intelligence"

[node name="Wisdom" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Wisdom"

[node name="Points" type="RichTextLabel" parent="Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Points"

[node name="Values" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(32, 224)
layout_mode = 0
offset_left = 144.0
offset_top = 46.0
offset_right = 176.0
offset_bottom = 280.0
theme_override_constants/separation = 6

[node name="Level" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Strength" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Vitality" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Agility" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Dexterity" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Intelligence" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Wisdom" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Points" type="RichTextLabel" parent="Values"]
custom_minimum_size = Vector2(32, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "999"

[node name="Btns" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 64.0
offset_right = 224.0
offset_bottom = 266.0

[node name="Strength" type="Button" parent="Btns"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
text = "+"

[node name="Vitality" type="Button" parent="Btns"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
text = "+"

[node name="Agility" type="Button" parent="Btns"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
text = "+"

[node name="Dexterity" type="Button" parent="Btns"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
text = "+"

[node name="Intelligence" type="Button" parent="Btns"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
text = "+"

[node name="Wisdom" type="Button" parent="Btns"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
text = "+"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 12.0
offset_right = 496.0
offset_bottom = 268.0

[node name="Labels" type="VBoxContainer" parent="Panel"]
offset_left = 16.0
offset_top = 8.0
offset_right = 112.0
offset_bottom = 182.0
theme_override_constants/separation = 6

[node name="Life" type="RichTextLabel" parent="Panel/Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Life Points"

[node name="Mana" type="RichTextLabel" parent="Panel/Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Mana Points"

[node name="Power" type="RichTextLabel" parent="Panel/Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Power"

[node name="Critical" type="RichTextLabel" parent="Panel/Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Critical"

[node name="Magic" type="RichTextLabel" parent="Panel/Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Magic Power"

[node name="TurnSpeed" type="RichTextLabel" parent="Panel/Labels"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Turn Speed"

[node name="Values" type="VBoxContainer" parent="Panel"]
offset_left = 112.0
offset_top = 10.0
offset_right = 208.0
offset_bottom = 184.0
theme_override_constants/separation = 6

[node name="Life" type="RichTextLabel" parent="Panel/Values"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[right]999"

[node name="Mana" type="RichTextLabel" parent="Panel/Values"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[right]999"

[node name="Power" type="RichTextLabel" parent="Panel/Values"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[right]999"

[node name="Critical" type="RichTextLabel" parent="Panel/Values"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[right]999"

[node name="Magic" type="RichTextLabel" parent="Panel/Values"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[right]999"

[node name="TurnSpeed" type="RichTextLabel" parent="Panel/Values"]
custom_minimum_size = Vector2(96, 24)
layout_mode = 2
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[right]999"

[node name="ExpLabel" type="RichTextLabel" parent="Panel"]
custom_minimum_size = Vector2(96, 24)
offset_left = 16.0
offset_top = 192.0
offset_right = 112.0
offset_bottom = 216.0
theme = ExtResource("1_sqxtk")
bbcode_enabled = true
text = "[b]Exp"

[node name="Experience" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 214.0
offset_right = 216.0
offset_bottom = 241.0
theme_override_styles/background = SubResource("StyleBoxFlat_pqojo")
theme_override_styles/fill = SubResource("StyleBoxFlat_ekxo2")
value = 50.0

[connection signal="pressed" from="Btns/Strength" to="." method="add_strength"]
[connection signal="pressed" from="Btns/Vitality" to="." method="add_vitality"]
[connection signal="pressed" from="Btns/Agility" to="." method="add_agility"]
[connection signal="pressed" from="Btns/Dexterity" to="." method="add_dexterity"]
[connection signal="pressed" from="Btns/Intelligence" to="." method="add_intelligence"]
[connection signal="pressed" from="Btns/Wisdom" to="." method="add_wisdom"]
